feat: codesmell fixed